[package]
name = "astral-tokio-tar"
version = "0.6.4"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "dignifiedquire <me@dignifiequire.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Aiden McClelland <me@drbonez.dev>",
]
homepage = "https://github.com/astral-sh/tokio-tar"
repository = "https://github.com/astral-sh/tokio-tar"
documentation = "https://docs.rs/tokio-tar"
license = "MIT OR Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2021"
rust-version = "1.83.0"

description = """
A Rust implementation of an async TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
futures-core = "0.3"
portable-atomic = "1"
rustc-hash = "2.1.0"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[target."cfg(unix)".dependencies]
libc = "0.2"
rustix = { version = "1.0", features = ["fs"] }
xattr = { version = "1.0", optional = true }

[features]
default = ["xattr"]

[lib]
name = "tokio_tar"
